--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,7 +1,8 @@
 name: Sync To Gitee
 
 on:
-  schedule: {[corn: 0 * * * *]}
+  schedule: [{cron: 0 * * * *}]
+  workflow_dispatch:
     
 jobs:
   build:
