--- a/.github/workflows/Auto-Assign.yml
+++ b/.github/workflows/Auto-Assign.yml
@@ -1,9 +1,9 @@
 name: Auto Assign
 on:
   issues:
-    types: [opened]
+    types: [opened, reopened]
   pull_request:
-    types: [opened]
+    types: [opened, reopened]
 jobs:
   run:
     runs-on: ubuntu-latest
