--- a/.github/workflows/Auto-Assign.yml
+++ b/.github/workflows/Auto-Assign.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Auto-assign issue
       uses: pozil/auto-assign-issue@v1
       with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.BOT }}
           teams: member
           removePreviousAssignees: true
