--- a/.github/workflows/Auto-Assign.yml
+++ b/.github/workflows/Auto-Assign.yml
@@ -17,3 +17,4 @@ jobs:
           repo-token: ${{ secrets.BOT }}
           teams: member
           removePreviousAssignees: true
+          numOfAssignee: 3
