--- a/.github/workflows/Auto-Label.yml
+++ b/.github/workflows/Auto-Label.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/github-script@v6.4.1
         with:
           script: |
-            api.rest.issues.removeLabel({
+            github.rest.issues.removeLabel({
                 repo: context.repo.repo,
                 owner: context.repo.owner,
                 issue_number: context.issue.number,
