--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "post": "tsx scripts/post.ts",
-    "test": "tsx scripts/post.spec.ts",
+    "test": "vitest run -u",
     "format": "prettier --write **/*.ts"
   },
   "keywords": [],
@@ -20,6 +20,8 @@
     "@types/node": "^20.8.6",
     "prettier": "^3.0.3",
     "tsx": "^3.13.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6"
   }
 }
