--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "prettier": "^3.0.3",
     "tsx": "^3.13.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "vite": "^4.4.11"
   }
 }
